kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: football
