kustomize/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: football-db
  template:
    metadata:
      labels:
        app: football-db
    spec:
      containers:
        - name: football-db
          image: registry.gitlab.com/envite-consulting/sustainable-software-architecture/football-databases:postgres-17.7
          args: ["-p", "5438"]
          ports:
            - containerPort: 5438
          resources:
            requests:
              memory: "128Mi"
          livenessProbe:
            exec:
              command: ["pg_isready", "-p", "5438", "-U", "postgres"]
            initialDelaySeconds: 30
            periodSeconds: 10
