kustomize/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-app
spec:
  selector:
    app: football-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
