kustomize/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-db
spec:
  selector:
    app: football-db
  ports:
    - protocol: TCP
      port: 5438
      targetPort: 5438
