kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: football-app-route
  namespace: football
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: football
  rules:
    - backendRefs:
        - name: football-app
          namespace: football
          port: 8080
